# arlunio

./: .dir-locals.el  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  1-1d867488c96c4a2263c5.js  1-1d867488c96c4a2263c5.js.map  404.html  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  app-45f99bf811a5ee18b310.js  app-45f99bf811a5ee18b310.js.map  azure-pipelines.yml  build-blog.yml  chunk-map.json  component---src-pages-404-js-2614271f8dcf05803d19.js  component---src-pages-404-js-2614271f8dcf05803d19.js.map  component---src-pages-blog-js-4ec87ea41eaf8eb7a15f.js  component---src-pages-blog-js-4ec87ea41eaf8eb7a15f.js.map  component---src-pages-index-js-9bfa8d279a3e18020090.js  component---src-pages-index-js-9bfa8d279a3e18020090.js.map  component---src-templates-post-js-60199d3e1f7bce1dd8bc.js  component---src-templates-post-js-60199d3e1f7bce1dd8bc.js.map  environment.yml  index.html  manifest.webmanifest  netlify.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  (+8 more)
.ci/: blog.yml  python.yml
.github/workflows/: blog-release.yml  docs-release.yml  lint-python.yml  python-lint.yml  python-pr.yml  python-release.yml  release-python.yml  test.yml
404/: index.html
arlunio/: __init__.py  __main__.py  _color.py  _config.py  _core.py  _expressions.py  _image.py  _images.py  _parameters.py  _shapes.py  color.py  context.py  definition.py  image.py  imp.py  loaders.py  mask.py  math.py  pattern.py  shape.py  testing.py
arlunio/cli/: __init__.py  _interface.py  repl.py  tutorial.py
arlunio/doc/: __init__.py  builder.py  directives.py  image.py  notebook.py
arlunio/imp/: __init__.py
arlunio/lib/: __init__.py  basic.py  image.py  mask.py  math.py  operators.py  parameters.py  pattern.py  shape.py  shapes.py
arlunio/raytrace/: camera.py  data.py  material.py  object.py  render.py
arlunio/testing/: __init__.py
arlunio/tk/: __init__.py  components.py
arlunio/tutorial/: index.ipynb
blog/: .gitignore  config.toml  gallery.py  gatsby-browser.js  gatsby-config.js  gatsby-node.js  index.html  package-lock.json  package.json  requirements.txt
blog/arlunio-the-hard-way-part-1/: index.html
blog/public/: CNAME
blog/templates/: base.html  binder_badge.html  gallery.html  image.html
changes/: 177.doc.rst  187.stdlib.rst  204.doc.rst  205.doc.rst  205.misc.rst  207.feature.rst  210.misc.rst  216.feature.rst  216.misc.rst  223.fix.rst  227.doc.rst  227.misc.rst  227.stdlib.rst  228.stdlib.rst  230.stdlib.rst  231.stdlib.rst  233.doc.rst  233.stdlib.rst  237.doc.rst  247.stdlib.rst  249.stdlib.rst
css/: gallery.css  main.css  variables.css
docs/: .buildinfo  Makefile  _definitions.rst  _references.rst  about.rst  api.html  api.rst  changes.html  changes.rst  conf.py  developing.rst  extending.rst  genindex.html  glossary.html  glossary.rst  index.html  index.rst  make.bat  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  users.rst
docs/_images/: README.md
docs/_modules/: arlunio.html  index.html
docs/_sources/: api.rst.txt  changes.rst.txt  glossary.rst.txt
docs/_static/: documentation_options.js
docs/api/: expressions.rst  index.rst
docs/background/: index.html
docs/changelog/: archive.html  index.html  index.rst
docs/contributing/: get-started.html  get-started.rst  index.html  index.rst  release-process.html
docs/developing/: index.rst  reference.rst
docs/examples/: checkerboard.rst  index.rst  invert-color.rst
docs/extend/: expression_writing.rst  expressions.rst  index.rst  sources.rst  tweakables.rst
docs/extending/: index.rst
docs/maths/: cartesian-coordinates.rst  coordinates.rst  index.rst  numbers.rst  polar-coordinates.rst
docs/reference/: domain.rst  drawable.rst  image.rst  index.rst  interpolators.rst  primitives.rst
docs/stdlib/: api.rst  basic-shapes.rst  image.html  image.rst  index.html  index.rst  mask.html  mask.rst  masks.html  masks.rst  (+15 more)
examples/: Atom.ipynb  Checkerboard.ipynb  Circular Pattern.ipynb  Creeper.ipynb  Eye of Sauron.ipynb  Ghost.ipynb  Olympic Rings.ipynb  Raytracing Demo.ipynb  Simple Map.ipynb  Square Demo.ipynb  Sunny Day.ipynb  Sunset.ipynb  SuperEllipse Demo.ipynb  Target.ipynb
gallery/: atom.html  checkerboard.html  circular-pattern.html  creeper.html  eye-of-sauron.html  ghost.html  index.html  olympic-rings.html  raytracing-demo.html  rolling-hills.html  simple-clock.html  simple-map.html  square-demo.html  sunny-day.html  sunset.html  superellipse-demo.html  target.html
lib/arlunio/: .coveragerc  .flake8  README.md  pyproject.toml  pytest.ini  setup.py
lib/arlunio/arlunio/: __init__.py  ast.py  color.py  image.py  imp.py  mask.py  math.py  region.py  shape.py  testing.py
lib/arlunio/arlunio/backends/: numpy.py
lib/arlunio/arlunio/cli/: __main__.py
lib/arlunio/arlunio/doc/: notebook.py
lib/arlunio/arlunio/raytrace/: __init__.py
lib/arlunio/changes/: 252.fix.rst  252.removal.rst
lib/arlunio/tests/: conftest.py  test_definition.py  test_imp.py  test_math.py
lib/arlunio/tests/data/: Add.ipynb
lib/arlunio/tests/data/doc/arlunio_image/: img-solution.rst  runtime-error.rst
lib/arlunio/tests/doc/: test_image.py
mage/: __init__.py  coords.py  image.py  img.py  motion.py  paths.py  prims.py  time.py
mathemage/: README.rst  setup.py
scripts/: apidoc.py  clean-notebooks.sh  devenv-setup.sh  exampledoc.py  pre-commit.sh  should-release.sh  version_check.py  write-release-notes.sh
stylo/: README.rst  __init__.py  __main__.py  _shapes.py  codefu.py  color.py  context.py  coords.py  domain.py  drawable.py  error.py  image.py  interpolate.py  loaders.py  objects.py  parameters.py  prims.py  setup.py  shape.py  shapes.py  time.py  utils.py
tests/: conftest.py  test_channel.py  test_color.py  test_core.py  test_definition.py  test_domain.py  test_driver.py  test_image.py  test_images.py  test_loaders.py  test_mask.py  test_math.py  test_mono_color.py  test_parameters.py  test_sampler.py  test_shapes.py  test_utils.py
tutorial/: index.ipynb
(+358 files in other folders)
