[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
  "docs",
  "docs/*",
  ".pre-commit-config.yaml",
  "azure-pipelines.yml",
  "scripts",
  "scripts/*",
  ".coveragerc",
  ".flake8",
  "*.ipynb_checkpoints",
  "*.ipynb_checkpoints/*",
  "tests",
  "tests/*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = pkg, lint, docs, py37
isolated_build = True

[testenv]
deps =
     pytest
     pytest-cov
     pytest-azurepipelines
extras = all
commands =
    pytest --doctest-glob="*.rst" --cov=arlunio --cov-report html {posargs}

[testenv:docs]
deps =
     sphinx
     sphinx_rtd_theme
commands =
    sphinx-build -M linkcheck docs docs/_build -E -a -j auto {posargs}
    sphinx-build -M html docs docs/_build -E -a -j auto {posargs}

[testenv:docs-preview]
deps =
     {[testenv:docs]deps}
     sphinx-autobuild
commands =
     sphinx-autobuild docs docs/_build/html -E -a {posargs}

[testenv:lint]
deps =
     pre-commit
commands =
    pre-commit run --all-files

[testenv:pkg]
deps =
     sphinx
     wheel
whitelist_externals = cp
usedevelop = True
commands =

     sphinx-build -M nbtutorial docs/ docs/_build -E -a
     cp -r docs/_build/nbtutorial/using/tutorial/ arlunio

     python setup.py sdist bdist_wheel
"""