[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/arlunio/issues/{issue}>`_"
underlines = ["-", "^", "\""]


[[tool.towncrier.type]]
     directory = "feature"
     name = "Features"
     showcontent = true

[[tool.towncrier.type]]
     directory = "fix"
     name = "Fixes"
     showcontent = true

[[tool.towncrier.type]]
     directory = "doc"
     name = "Docs"
     showcontent = true

[[tool.towncrier.type]]
     directory = "stdlib"
     name = "Standard Library"
     showcontent = true

[[tool.towncrier.type]]
     directory = "removal"
     name = "Removed"
     showcontent = true

[[tool.towncrier.type]]
     directory = "misc"
     name = "Misc"
     showcontent = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = pkg, docs, py37
isolated_build = True

[testenv]
deps =
     hypothesis
     pytest
     pytest-cov
extras = all
commands =
    pytest --tb=short --doctest-modules --doctest-glob="*.rst" --cov=arlunio --cov-report term --cov-report xml {posargs}

[testenv:docs]
deps =
     sphinx
     sphinx_rtd_theme
commands =
    sphinx-build -M linkcheck docs docs/_build -E -a -j auto {posargs}
    sphinx-build -M html docs docs/_build -E -a -j auto {posargs}

[testenv:pkg]
deps =
     sphinx
     wheel
whitelist_externals = cp
usedevelop = True
commands =

     python setup.py clean --all

     sphinx-build -M nbtutorial docs/ docs/_build -E -a
     cp -r docs/_build/nbtutorial/users/ arlunio/tutorial
     touch arlunio/tutorial/__init__.py

     python setup.py sdist bdist_wheel
"""
